<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/logo_principal"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/logoDescription"
        app:srcCompat="@drawable/ic_running_blue" />

    <TextView
        android:id="@+id/nombre_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/texto_activity_main"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/texto_slogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/slogan_activity_main"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/boton_registro"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:onClick="Registro"
            android:text="@string/botonRegistro"
            android:textColor="@color/Night_Winter4" />

        <Button
            android:id="@+id/boton_login"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:onClick="Login"
            android:text="@string/botonLogin"
            android:textColor="@color/Night_Winter4" />
    </LinearLayout>

</LinearLayout>