<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        tools:context=".Registro">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/logoDescription"
            app:srcCompat="@drawable/ic_running_blue" />

        <EditText
            android:id="@+id/input_nombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView1"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:autofillHints="name"
            android:ems="10"
            android:hint="@string/hint_name"

            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/input_userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_nombres"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:autofillHints="username"
            android:ems="10"
            android:hint="@string/hint_userName"

            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/input_contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_userName"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:autofillHints="password"
            android:ems="10"
            android:hint="@string/hint_password"

            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/input_Confirmarcontraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_contraseña"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:autofillHints="password"
            android:ems="10"
            android:hint="@string/hint_Confirm_password"

            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/input_edad"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_Confirmarcontraseña"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="5dp"
            android:autofillHints="no"

            android:ems="10"
            android:hint="@string/hint_age"
            android:inputType="number"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/input_peso"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_Confirmarcontraseña"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/input_edad"
            android:autofillHints="no"
            android:ems="10"

            android:hint="@string/hint_peso"
            android:inputType="number"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/input_altura"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_Confirmarcontraseña"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/input_peso"
            android:autofillHints="no"

            android:ems="10"
            android:hint="@string/hint_altura"
            android:inputType="number"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/input_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_edad"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:autofillHints="phone"
            android:ems="10"
            android:hint="@string/hint_phone"
            android:inputType="phone"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_telefono"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/botonRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_email"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/botonRegistro"
            android:textColor="@color/Night_Winter4" />

    </RelativeLayout>
</ScrollView>